Added category id to transaction search result, defined details for tags for documentation
