# app/config/packages/nelmio_api_doc.yaml
@@ -4,6 +4,27 @@ nelmio_api_doc:
       title: SmartFin
       description: Your ultimate financial dashboard with intuitive tools for smart financial management
       version: 1.0.0
+    tags:
+      - name: "Budgets"
+        description: "These are all of the endpoints that have to do with budgets"
+      - name: "Overview"
+        description: "API endpoints used for overview page"
+      - name: "Categories"
+        description: "These are all of the endpoints that have to do with categories"
+      - name: "Transactions"
+        description: "These are all of the endpoints that have to do with transactions"
+      - name: "Transaction Templates"
+        description: "These are all of the endpoints that have to do with transaction templates"
+      - name: "Entry Points"
+        description: "These are the main entry points for out site"
+      - name: "User"
+        description: "These are all of the endpoints that have to do with user"
+      - name: "Exports"
+        description: "Everything that has to do with exporting or viewing the exported files"
+      - name: "Mailer"
+        description: "Mailer service used for sending emails"
+      - name: "Generators"
+        description: "PDF and XLS file generators"
     components:
       securitySchemes:
         Bearer:
@@ -35,7 +56,6 @@ nelmio_api_doc:
                     totalPages:
                       type: integer
                       example: 1
-
         Budget:
           allOf:
             - $ref: '#/components/schemas/QuerySuccessResponse'
