# app/src/Controller/MailerController.php
@@ -8,6 +8,7 @@ use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpKernel\Attribute\MapRequestPayload;
 
+use OpenApi\Attributes as OA;
 use Symfony\Component\Routing\Attribute\Route;
 use SymfonyCasts\Bundle\ResetPassword\Exception\ResetPasswordExceptionInterface;
 
@@ -18,6 +19,7 @@ class MailerController extends AbstractController
      * @throws ResetPasswordExceptionInterface
      */
     #[Route('/forgot-password', name: 'api_forgot_password', methods: ['POST'])]
+    #[OA\Tag(name: 'Mailer')]
     public function resetPassword(
         #[MapRequestPayload] RequestPasswordResetDto $requestPasswordResetDto,
         MailerService                                $mailerService
